--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include("includes/header") %>
+<%- include("includes/navbar") %>
+<main class="container-fluid">
+    <h1>404 NOT FOUND</h1>
+    <p>Page Not Found</p>
+</main>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><%= pageTitle %></title>
-</head>
-
-<body>
-    <h1>Page Not Found</h1>
-</body>
-
-</html>
+<%- include("includes/footer") %>
