--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -1,15 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><%= pageTitle %></title>
-</head>
-
-<body>
-    <h1>Add Product</h1>
-</body>
-
-</html>
+<%- include("includes/header") %>
+<%- include("includes/navbar") %>
+<main class="container-fluid">
+    <div class="col-sm-8">
+        <div class="card">
+            <div class="card-header">
+                <h1>Add Product</h1>
+            </div>
+            <div class="card-body">
+                <form action="/admin/add-product" method="POST">
+                    <div class="form-group">
+                        <label for="title">Title</label>
+                        <input class="form-control" type="text" name="title">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</main>
+<%- include("includes/footer") %>
