--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="/css/styles.css" rel="stylesheet">
-    <title><%= pageTitle %></title>
-</head>
-
-<body>
+<%- include("includes/header") %>
+<%- include("includes/navbar") %>
+<main class="container-fluid">
     <h1>Shop Home</h1>
-</body>
-
-</html>
+</main>
+<%- include("includes/footer") %>
