--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -12,6 +12,7 @@
                         <label for="title">Title</label>
                         <input class="form-control" type="text" name="title">
                     </div>
+                    <button type="submit" class="btn btn-sm btn-primary">Add Product</button>
                 </form>
             </div>
         </div>
