--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,7 @@
+* {
+    text-rendering: optimizeLegibility;
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -6,4 +10,31 @@ body {
 
 .container-fluid {
     padding: 3% 5%;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.card-box {
+    width: 100%;
+    border-radius: 2px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.box {
+    padding: 3%;
+}
+
+.card-image {
+    width: 100%;
+}
+
+.box-desc {
+    font-size: 0.8rem;
+    line-height: 1.5;
+    text-align: justify;
+    word-spacing: 1;
 }
