--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,5 +1,5 @@
-<%- include("includes/header") %>
-<%- include("includes/navbar") %>
+<%- include("../includes/header") %>
+<%- include("../includes/navbar") %>
 <main class="container-fluid">
     <div class="row">
         <% if(products.length > 0) { %>
@@ -26,4 +26,4 @@
 
     </div>
 </main>
-<%- include("includes/footer") %>
+<%- include("../includes/footer") %>
