--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -10,7 +10,16 @@
                 <a class="nav-link bold" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+                <a class="nav-link bold" href="/products">Products</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link bold" href="/cart">Cart</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link bold" href="/admin/add-product">Add Product</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link bold" href="/admin/product">Admin Product</a>
             </li>
         </ul>
     </div>
