--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,6 +1,6 @@
 <%- include("../includes/header") %>
 <%- include("../includes/navbar") %>
 <main class="container-fluid">
-
+    <h1>Nothing Item's</h1>
 </main>
 <%- include("../includes/footer") %>
