--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -16,6 +16,9 @@
                 <a class="nav-link bold" href="/cart">Cart</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link bold" href="/orders">Orders</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link bold" href="/admin/add-product">Add Product</a>
             </li>
             <li class="nav-item">
